# TkChess

./: .env.example  README.md  pyproject.toml  setup.cfg
chess/: __init__.py  __main__.py  main.py
chess/core/: config.py
chess/lib/: __init__.py
chess/lib/figures/: __init__.py  base.py  elephant.py  horse.py  king.py  pawn.py  queen.py  rook.py
chess/lib/schemas/: __init__.py
chess/lib/schemas/enums/: __init__.py  abc.py  figure.py  game_map.py
chess/lib/utils/: __init__.py  cache.py  game_map.py  resource_path.py
chess/ui/pages/: __init__.py  abc.py  game.py
chess/ui/units/: __init__.py  image.py
chess/ui/windows/: __init__.py  abc.py  main.py
